# toeic4all

./: DEVELOPMENT_REPORT.md  Dockerfile  GOOGLE_SIGNIN_SETUP_STATUS.md  KAKAO_NAVER_SIGNIN_SETUP_STATUS.md  README.md  config.json  config.py  generate_sitemap.py  pubspec.yaml  pyproject.toml  setup_google_signin.md  test_import.dart
android/app/: build.gradle.kts
app/: __init__.py
app/models/: __init__.py  board.py  my_questions.py  question_report.py  user_detail.py  user_test_detail.py  vocabularies.py  wrong_questions.py
app/routes/: __init__.py  api.py  auth.py  board.py  user_details.py
deploy/toeic4all/: Chart.yaml  values.yaml
deploy/toeic4all-flask/: Chart.yaml  values.yaml
deploy/toeic4all_flask/: Chart.yaml  values.yaml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
static/: sitemap.xml
static/css/: answers.css  board.css  explanations.css  layout.css  main_page.css  mock_test.css  my_learning_analysis.css  my_note.css  my_page.css  my_voca.css  (+5 more)
templates/: answers.html  board.html  download.html  explanations.html  forum.html  layout.html  login.html  main_page.html  mock_test.html  my_learning_analysis.html  my_note.html  my_page.html  my_voca.html  questions.html  rank.html  signup.html  user_detail.html  user_layout.html  voca_test.html
test/: widget_test.dart
toeic4all/: ContentView.swift  toeic4allApp.swift
toeic4all.xcodeproj/: project.pbxproj
toeic4allTests/: toeic4allTests.swift
toeic4allUITests/: toeic4allUITests.swift  toeic4allUITestsLaunchTests.swift
web/: index.html  manifest.json
(+124 files in other folders)
