[tool.poetry]
name = "toeic4all-flask"
version = "0.1.0"
description = ""
authors = ["ruo <comsa333@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
flask-restful = "^0.3.10"
flask-sqlalchemy = "^3.0.3"
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"
flask-jwt-extended = "^4.5.2"
pdfkit = "^1.0.0"
reportlab = "^4.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
